--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
     "@types/react-redux": "^7.1.11",
     "@types/react-router-dom": "^5.1.6",
     "@types/react-slick": "^0.23.4",
+    "@types/react-transition-group": "^4.4.0",
     "@types/react-typist": "^2.0.1",
     "@types/yup": "^0.29.10",
     "antd": "^4.9.1",
@@ -30,10 +31,13 @@
     "react-hexagon": "^1.1.3",
     "react-image": "^4.0.3",
     "react-redux": "^7.2.2",
+    "react-responsive-carousel": "^3.2.12",
+    "react-route-transition": "^1.0.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-scroll-parallax": "^2.3.5",
     "react-slick": "^0.27.13",
+    "react-transition-group": "^4.4.1",
     "react-typist": "^2.0.5",
     "redux": "^4.0.5",
     "slick-carousel": "^1.8.1",
