--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-ga": "^3.3.0",
     "react-hexagon": "^1.1.3",
     "react-image": "^4.0.3",
+    "react-player": "^2.9.0",
     "react-redux": "^7.2.2",
     "react-responsive-carousel": "^3.2.12",
     "react-route-transition": "^1.0.6",
