--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "react-image": "^4.0.3",
     "react-player": "^2.9.0",
     "react-redux": "^7.2.2",
-    "react-responsive-carousel": "^3.2.12",
     "react-route-transition": "^1.0.6",
+    "react-responsive-carousel": "file:react-responsive-carousel-3.2.18.tgz",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-scroll-parallax": "^2.3.5",
