--- a/package.json
+++ b/package.json
@@ -5,39 +5,42 @@
   "dependencies": {
     "@ant-design/icons": "^4.3.0",
     "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
+    "@testing-library/react": "13.2.0",
+    "@testing-library/user-event": "14.2.0",
     "@types/aphrodite": "^2.0.0",
     "@types/axios": "^0.14.0",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.53",
-    "@types/react-dom": "^16.9.8",
+    "@types/jest": "27.5.1",
+    "@types/node": "17.0.33",
+    "@types/react": "18.0.9",
+    "@types/react-dom": "18.0.4",
+    "@types/react-image-gallery": "^1.0.4",
     "@types/react-redux": "^7.1.11",
-    "@types/react-router-dom": "^5.1.6",
+    "@types/react-router-dom": "^5.3.3",
     "@types/react-slick": "^0.23.4",
     "@types/react-transition-group": "^4.4.0",
     "@types/react-typist": "^2.0.1",
     "@types/yup": "^0.29.10",
-    "antd": "^4.9.1",
+    "antd": "^4.20.4",
     "aphrodite": "^2.4.0",
     "aphrodite-jss": "^2.1.0",
-    "axios": "^0.21.0",
+    "axios": "0.27.2",
     "formik": "^2.2.5",
     "framer-motion": "^2.9.5",
-    "node-sass": "^4.14.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "node-sass": "^7.0.1",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
     "react-ga": "^3.3.0",
     "react-hexagon": "^1.1.3",
     "react-image": "^4.0.3",
+    "react-image-gallery": "^1.2.7",
+    "react-loading-skeleton": "^2.2.0",
     "react-player": "^2.9.0",
     "react-redux": "^7.2.2",
-    "react-route-transition": "^1.0.6",
     "react-responsive-carousel": "file:react-responsive-carousel-3.2.18.tgz",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
-    "react-scroll-parallax": "^2.3.5",
+    "react-route-transition": "^1.0.6",
+    "react-router-dom": "6.3.0",
+    "react-scripts": "5.0.1",
+    "react-scroll-parallax": "3.2.0",
     "react-slick": "^0.27.13",
     "react-transition-group": "^4.4.1",
     "react-typist": "^2.0.5",
@@ -46,7 +49,7 @@
     "slick-carousel": "^1.8.1",
     "typescript": "^4.0.3",
     "use-is-in-viewport": "^1.0.9",
-    "web-vitals": "^0.2.4",
+    "web-vitals": "2.1.4",
     "yup": "^0.32.1"
   },
   "scripts": {
@@ -76,9 +79,9 @@
     ]
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.9.0",
-    "@typescript-eslint/parser": "^4.9.0",
-    "eslint": "^7.15.0",
+    "@typescript-eslint/eslint-plugin": "5.23.0",
+    "@typescript-eslint/parser": "5.23.0",
+    "eslint": "8.15.0",
     "eslint-plugin-react": "^7.21.5"
   }
 }
