--- a/package.json
+++ b/package.json
@@ -1,61 +1,64 @@
 {
-  "name": "app",
+  "name": "eportfolio",
   "version": "0.1.0",
+  "homepage": "https://tankh99.github.io/eportfolio",
   "private": true,
   "dependencies": {
-    "@ant-design/icons": "^4.3.0",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "13.2.0",
-    "@testing-library/user-event": "14.2.0",
+    "@ant-design/icons": "^4.8.0",
+    "@chakra-ui/react": "^2.4.4",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "13.4.0",
+    "@testing-library/user-event": "14.4.3",
     "@types/aphrodite": "^2.0.0",
     "@types/axios": "^0.14.0",
-    "@types/jest": "27.5.1",
-    "@types/node": "17.0.33",
-    "@types/react": "18.0.9",
-    "@types/react-dom": "18.0.4",
-    "@types/react-image-gallery": "^1.0.4",
-    "@types/react-redux": "^7.1.11",
+    "@types/jest": "29.2.4",
+    "@types/node": "18.11.17",
+    "@types/react": "18.0.26",
+    "@types/react-dom": "18.0.9",
+    "@types/react-image-gallery": "^1.2.0",
+    "@types/react-redux": "^7.1.24",
     "@types/react-router-dom": "^5.3.3",
-    "@types/react-slick": "^0.23.4",
-    "@types/react-transition-group": "^4.4.0",
-    "@types/react-typist": "^2.0.1",
-    "@types/yup": "^0.29.10",
-    "antd": "^4.20.4",
+    "@types/react-slick": "^0.23.10",
+    "@types/react-transition-group": "^4.4.5",
+    "@types/yup": "^0.29.14",
     "aphrodite": "^2.4.0",
     "aphrodite-jss": "^2.1.0",
-    "axios": "0.27.2",
-    "formik": "^2.2.5",
-    "framer-motion": "^2.9.5",
-    "node-sass": "^7.0.1",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "react-ga": "^3.3.0",
+    "axios": "1.2.1",
+    "formik": "^2.2.9",
+    "framer-motion": "^7.10.3",
+    "node-sass": "^8.0.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-ga": "^3.3.1",
     "react-hexagon": "^1.1.3",
     "react-image": "^4.0.3",
-    "react-image-gallery": "^1.2.7",
-    "react-loading-skeleton": "^2.2.0",
-    "react-player": "^2.9.0",
-    "react-redux": "^7.2.2",
+    "react-image-gallery": "^1.2.11",
+    "react-loading-skeleton": "^3.1.0",
+    "react-player": "^2.11.0",
+    "react-redux": "^8.0.5",
     "react-responsive-carousel": "file:react-responsive-carousel-3.2.18.tgz",
     "react-route-transition": "^1.0.6",
-    "react-router-dom": "6.3.0",
+    "react-router-dom": "6.5.0",
     "react-scripts": "5.0.1",
-    "react-scroll-parallax": "3.2.0",
-    "react-slick": "^0.27.13",
-    "react-transition-group": "^4.4.1",
-    "react-typist": "^2.0.5",
-    "redux": "^4.0.5",
-    "serve": "^11.3.2",
+    "react-scroll-parallax": "3.3.2",
+    "react-slick": "^0.29.0",
+    "react-transition-group": "^4.4.5",
+    "react-type-animation": "^2.1.2",
+    "redux": "^4.2.0",
+    "serve": "^14.1.2",
     "slick-carousel": "^1.8.1",
-    "typescript": "^4.0.3",
-    "use-is-in-viewport": "^1.0.9",
-    "web-vitals": "2.1.4",
-    "yup": "^0.32.1"
+    "typescript": "^4.9.4",
+    "web-vitals": "3.1.0",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "dev": "react-scripts start",
     "start": "serve -s build",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "heroku-postbuild": "npm run build"
@@ -79,9 +82,8 @@
     ]
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "5.23.0",
-    "@typescript-eslint/parser": "5.23.0",
-    "eslint": "8.15.0",
-    "eslint-plugin-react": "^7.21.5"
+    "eslint-plugin-react": "^7.31.11",
+    "gh-pages": "^4.0.0",
+    "tailwindcss": "^3.2.4"
   }
 }
